--- a/index.html
+++ b/index.html
@@ -206,16 +206,16 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit eos excepturi dolor asperiores et at ut, magnam ipsa nemo quis, in reiciendis hic pariatur. Alias sint perspiciatis architecto dolore excepturi.</p>
           </div>
         </aside>
-      </a>
+      </a> -->
       <a href="#trabajo-5" class="portfolio-card">
-        <img src="./assets/portfolio-5.jpg" alt="Trabajo 5">
+        <img src="./assets/game2048.png" alt="Trabajo 5">
         <aside class="portfolio-card-info">
           <div>
-            <h3>Proyecto 5</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptatum dignissimos expedita necessitatibus beatae itaque eaque accusamus quam dolor! Eum.</p>
+            <h3>Game 2048</h3>
+            <p>Bienvenido a 2048, el adictivo juego de puzzle que te desafiará a alcanzar la mítica potencia de 2048 en un emocionante tablero de 4x4 casillas. Tu misión es deslizar las fichas numéricas adyacentes vertical u horizontalmente para combinarlas y formar números aún más grandes. ¡Pero cuidado! El tiempo apremia y cada movimiento cuenta. Pon a prueba tu estrategia y habilidad matemática mientras te sumerges en este desafiante y adictivo rompecabezas. ¿Estás preparado para el reto? ¡Adelante, busca el dominio del 2048 y conviértete en el campeón de este fascinante juego!</p>
           </div>
         </aside>
-      </a> -->
+      </a>
       <a href="#trabajo-6" class="portfolio-card">
         <img src="./assets/portfolio-6.jpg" alt="Metrica JavaScript">
         <aside class="portfolio-card-info">
@@ -329,19 +329,21 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
       <article class="portfolio-modal">
-        <img src="./assets/portfolio-5.jpg" alt="Trabajo 5">
+        <img src="./assets/game2048.png" alt="Trabajo 5">
         <div class="portfolio-info">
-          <h3>Project name 5</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium maxime odio dolore magni architecto excepturi ipsum quia necessitatibus alias natus.</p>
+          <h3>Game 2048</h3>
+          <p>Bienvenido a 2048, el adictivo juego de puzzle que te desafiará a alcanzar la mítica potencia de 2048 en un emocionante tablero de 4x4 casillas. Tu misión es deslizar las fichas numéricas adyacentes vertical u horizontalmente para combinarlas y formar números aún más grandes. ¡Pero cuidado! El tiempo apremia y cada movimiento cuenta. Pon a prueba tu estrategia y habilidad matemática mientras te sumerges en este desafiante y adictivo rompecabezas. ¿Estás preparado para el reto? ¡Adelante, busca el dominio del 2048 y conviértete en el campeón de este fascinante juego!</p>
           <aside class="portfolio-details">
             <small><b>CLIENTE:</b></small>
-            <small>Fulano de Tal</small>
+            <small>Todo público</small>
             <small><b>FECHA:</b></small>
-            <small>03/03/21</small>
+            <small>14/07/23</small>
             <small><b>TIPO:</b></small>
-            <small>Web page</small>
-            <small><b>ENLACE:</b></small>
-            <small><a href="#" target="_blank" rel="noopener">Link al sitio.com</a></small>
+            <small>Juego hecho con TypeScript</small>
+            <small><b>DEMO:</b></small>
+            <small><a href="./pages/game2048/index.html" target="_blank" rel="noopener">Prueba el juego</a></small>
+            <small><b>CÓDIGO FUENTE:</b></small>
+            <small><a href="https://github.com/DevDuxAaron/game2048" target="_blank" rel="noopener">Verifica el código aquí</a></small>
           </aside>
         </div>
       </article>
